project/project-frontend/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dwkproject-dep
  namespace: dwk-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dwkproject
  template:
    metadata:
      labels:
        app: dwkproject
    spec:
      volumes:
        - name: dwkproject-vol
          persistentVolumeClaim:
            claimName: dwkproject-claim
      containers:
        - name: dwkproject
          image: FRONTEND_IMAGE
          imagePullPolicy: Always
          resources:
            limits:
              cpu: 1000m
              memory: 1Gi
          volumeMounts:
            - name: dwkproject-vol
              mountPath: /usr/src/app/files
