project/project-frontend/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dwkproject-svc
  namespace: dwk-project
spec:
  type: NodePort
  selector:
    app: dwkproject
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 8080
